# ProjectFinTrack

./: .coverage  README.md  conftest.py  pyproject.toml
data/: operations.xlsx  operations_errors.xlsx  spending_by_category.xlsx
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
